--- a/Personal Information Management App/index.html
+++ b/Personal Information Management App/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Information Management App</title>
   </head>
-  <body class="dark:bg-gray-800">
+  <body class="dark:bg-gray-800 bg-slate-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
